Sun Mar 27 18:25:25 BST 2011  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.0-pre1.
	* po/man-db.pot, po/*.po: Update.
	* man/po4a/po/man-db-manpages.pot: Update.

Thu Mar 24 12:46:38 GMT 2011  Colin Watson  <cjwatson@debian.org>

	* lib/security.c (do_system_drop_privs_child): Remove unused
	  variable.

Thu Mar 24 12:43:51 GMT 2011  Colin Watson  <cjwatson@debian.org>

	* src/man.c (lang): Make non-const.
	  (local_man_loop): Free lang after calling display.
	  (display_filesystem): Likewise.
	  (display_database): Likewise.
	  (do_global_apropos_section): Ensure lang is set while calling
	  display.
	* NEWS: Document this.

Thu Mar 24 01:22:00 GMT 2011  Colin Watson  <cjwatson@debian.org>

	Help novices find their way around.  See
	http://brainstorm.ubuntu.com/idea/25975.

	* src/man.c (main): Add "(press h for help or q to quit)" to the
	  default less prompt string.
	* man/man1/man.man1 (Controlling formatted output): Update
	  documentation.
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/*.po: Update.
	* NEWS: Document this.

Thu Mar 24 01:03:13 GMT 2011  Colin Watson  <cjwatson@debian.org>

	Rewrite all remaining subprocess handling in terms of libpipeline.

	* lib/security.c (do_system_drop_privs_child): New function.
	  (do_system_drop_privs): Rewrite using libpipeline.
	* src/catman.c (post_fork): New function.
	  (catman): Rewrite using libpipeline.
	  (add_arg): Rewrite as a wrapper around pipecmd_arg.
	  (do_catman): Remove.
	  (reset_cursor): Remove.
	  (parse_for_sec): Use libpipeline for subprocess handling.
	  (main): Install custom post-fork handler.
	* src/man.c (gripe_no_man) [_AIX || __sgi]: Rewrite vendor fallback
	  using libpipeline.
	* src/Makefile.am (catman_LDADD): Add $(libpipeline_LIBS).

	* src/catman.c (main): Duplicate the output of setlocale if
	  non-NULL.

	* configure.ac (AC_FUNC_VFORK): Remove.
	  (AC_REPLACE_FUNCS): Remove waitpid.
	* gnulib: Remove waitpid module.
	* lib/README: Remove waitpid.c.