@@ -1,3 +1,9 @@
+Mon Mar 28 11:06:04 BST 2011  Colin Watson  <cjwatson@debian.org>
+
+	* m4/man-gcc-warning.m4: Remove.
+	* gnulib: Import warnings module.
+	* configure.ac: Replace MAN_GCC_WARNING with gl_WARN_ADD.
+
 Sun Mar 27 18:25:25 BST 2011  Colin Watson  <cjwatson@debian.org>
 
 	* Version: 2.6.0-pre1.
